<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_login"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to Bisiesto TrainApp!"
        android:id="@+id/tv_welcome"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/btn_login_bg"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/et_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#EDEBE8"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#EDEBE8"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#EDEBE8"
            android:text="@string/btn_login"
            android:textColor="@color/btn_login" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_link_to_register_screen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@color/bg_login"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

</LinearLayout>




<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical"-->
    <!--android:background="@color/bisiesto_grey"-->
    <!--android:weightSum="1">-->

    <!--<TextView-->

        <!--android:id="@+id/welcomeTextView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:textStyle="bold"-->
        <!--android:gravity="center"-->
        <!--android:textSize="20sp"-->
        <!--android:layout_marginTop="35dp"-->
        <!--android:text="Bienvenido por favor ingresa ususario y contraseña para loguearte" />-->

    <!--<TextView-->

        <!--android:id="@+id/textView2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:textStyle="bold"-->
        <!--android:layout_marginTop="35dp"-->
        <!--android:text="Login:" />-->

    <!--<EditText-->
        <!--android:id="@+id/login"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:textStyle="normal"-->
        <!--android:typeface="sans">-->

        <!--<requestFocus />-->
    <!--</EditText>-->

    <!--<TextView-->
        <!--android:id="@+id/textView3"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:textStyle="bold"-->
        <!--android:text="Password:" />-->

    <!--<EditText-->
        <!--android:id="@+id/password"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_marginBottom="10dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:inputType="textPassword"-->
        <!--android:textStyle="normal"-->
        <!--android:typeface="sans" />-->

    <!--<Button-->
        <!--android:id="@+id/loginbutton"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:background="@color/bisiesto_green"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:layout_marginTop="40dp"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:text="Sign In" />-->
<!--</LinearLayout>-->
